dark mode erro fix

--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -1,7 +1,6 @@
 
-body.dark .partner-all-item {
-    background-color: #171C23!important;
-}
-body.dark {
-    background-color: #171C23!important;
+.dark-theme{
+    .partner-all-item {    
+        background-color: #171C23 !important;
+    } 
 }
